--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
   <head>
     <title>My blog</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link href="https://www.googleapis.com/css?family=Source+Sans+Pro:400" 
+	  rel="stylesheet">
   </head>
   <body>
     <header>
